# openai-egui

./: .gitignore  Cargo.toml  README.md
src/: main.rs  ui.rs
src/openai/: completions.rs  error.rs  mod.rs
