[package]
name = "openai-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.0"
eframe = "0.20.0"
ehttp = "0.2.0"
poll-promise = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
